<resources>
    <string name="app_name">ForApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="continues">Sign in to continue</string>
    <string name="welcome1">Welcome!</string>
    <string name="already">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_continue">CONTINUE</string>
    <string name="login_forget">Forgotten your password?</string>
    <string name="verificationcode">Enter verification code</string>
    <string name="enter_verification">enter verification code</string>
    <string name="verify">Verify</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="location">Location</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="emailbox">Follow instruction on your EmailBox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="type_a_message">Type a message</string>
    <string name="enter_comment">Enter comment...</string>
    <string name="comments">Comments</string>
    <string name="comment_message">Comment Message</string>
    <string name="_14_08_2020">14/08/2020</string>
    <string name="your_email_here">Your email here</string>
    <string name="enter_your_email_here_and_follow_instruction">enter your email here and follow Instructions</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="forgotten">Forgotten</string>
    <string name="profile_in_message">Profile</string>
    <string name="settings_in_message">Settings</string>
    <string name="sign_up_using_google">Sign up using Google</string>
    <string name="notifications">Notifications</string>
</resources>
