<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome1"
            android:textSize="24sp"
            android:layout_marginEnd="120dp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continues"
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="120dp"
            android:textColor="@android:color/black"
            tools:ignore="SmallSp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:layout_marginVertical="1dp"
            android:id="@+id/emailTLL">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawableStart="@drawable/ic_register_mail_color"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:layout_marginVertical="1dp"
            app:passwordToggleEnabled="true"
            android:id="@+id/passwordTLL">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_register_password_color"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/circle_p"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/colour_circle"
            android:elevation="10dp"
            android:padding="20dp">
            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressbar"
                android:layout_centerHorizontal="true"
                android:layout_width="30dp"
                android:background="@color/white"
                android:layout_centerInParent="true"
                android:layout_height="30dp"

                />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:layout_marginTop="140dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorPrimary"
                android:text="                    OR"
                android:textAlignment="center">
            </TextView>
        </LinearLayout>

        <!--            <com.google.android.gms.common.SignInButton-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:elevation="10dp"-->
        <!--                android:text="@string/sign_up_using_google"-->
        <!--                >-->
        <!--            </com.google.android.gms.common.SignInButton>-->


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SIGN UP"
            android:id="@+id/btn_sign_up"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/googleLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_signin_button_text_long"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/common_google_signin_btn_icon_dark"
            android:background="@drawable/rounded_button"
            />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/btn_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/login_forget"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>